fixed landing page spacing issue

--- a/web/src/components/LandingPage/styles/LandingPage.css
+++ b/web/src/components/LandingPage/styles/LandingPage.css
@@ -15,7 +15,6 @@
   text-align: center;
   flex-direction: column;
   justify-content: space-between;
-  height: 25%;
   margin-top: 5%;
 }
 
